<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_videoList">

    <fragment
        android:id="@+id/navigation_videoList"
        android:name="com.example.mobilevideo.ui.videolist.VideoList"
        android:label="@string/title_videoList"
        tools:layout="@layout/fragment_recycler_view" />

    <fragment
        android:id="@+id/navigation_live"
        android:name="com.example.mobilevideo.ui.live.Live"
        android:label="@string/title_live"
        tools:layout="@layout/fragment_live" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.mobilevideo.ui.account.Account"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>
