<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2F2"
        android:orientation="vertical"
        tools:context=".NavigationActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/h_back"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/backgroundPic" />

            <ImageView
                android:id="@+id/h_head"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/headPic" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/h_back"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_line"
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:background="@android:color/white"
                    android:contentDescription="@string/headLine" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/user_line"
                    android:text="@string/defaultName"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/user_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/user_line"
                    android:text="@string/defaultPhone"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />
            </RelativeLayout>

        </RelativeLayout>

        <com.example.mobilevideo.ui.account.ItemView
            android:id="@+id/user_nickName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:left_icon="@drawable/ic_nick_name"
            app:left_text="用户名"
            app:right_text="无名氏" />

        <com.example.mobilevideo.ui.account.ItemView
            android:id="@+id/user_pass"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:left_icon="@drawable/ic_pass"
            app:left_text="修改密码"
            app:right_text="" />

        <com.example.mobilevideo.ui.account.ItemView
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:left_icon="@drawable/ic_phone"
            app:left_text="绑定手机"
            app:right_text="@string/defaultPhone" />

        <com.example.mobilevideo.ui.account.ItemView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            app:left_icon="@drawable/ic_about"
            app:left_text="当前版本"
            app:right_text="@string/version" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>