<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_gravity="center_vertical"
    android:id="@+id/root_item"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/left_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:background="@drawable/ic_nick_name"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/left_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/left_icon"
        android:text="@string/register_nickName"
        android:textColor="#636363" />

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_right_arrow"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/right_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@id/right_arrow"
        android:text="@string/defaultName"
        android:textColor="#CDCDCD"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="#EFEEEE"
        android:contentDescription="@string/todo" />

</RelativeLayout>